--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sass": "^1.0.25",
+    "gatsby-source-filesystem": "^1.5.28",
+    "gatsby-transformer-json": "^1.0.16",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
