--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gatsby-plugin-sass": "^1.0.25",
     "gatsby-source-filesystem": "^1.5.28",
     "gatsby-transformer-json": "^1.0.16",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-particles-js": "^2.1.3"
   },
   "keywords": [
     "gatsby"
