--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/react-fontawesome": "0.0.19",
     "bulma": "^0.6.2",
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
